--- a/MTBrokerAPI/appsettings.json
+++ b/MTBrokerAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "UserSettings": {
-    "Secret": "SF$$3!@#r!is!no!t*dggd(*8&6)f$ATI1!d"
+    "Secret": "YoUrS@cR&TH!@"
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MTBroker;Trusted_Connection=True;MultipleActiveResultSets=true"
